--- a/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
+++ b/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
@@ -739,13 +739,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sequence Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uf4-jH-jVu" userLabel="NameLabel">
-                                                    <rect key="frame" x="10" y="10" width="324" height="20.5"/>
+                                                    <rect key="frame" x="10" y="10" width="230" height="20.5"/>
                                                     <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="16"/>
                                                     <color key="textColor" red="0.17351409792900085" green="0.4910888671875" blue="0.62135332822799683" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(000)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SxH-ci-QVi" userLabel="LengthLabel">
-                                                    <rect key="frame" x="344" y="12.5" width="40" height="15.5"/>
+                                                    <rect key="frame" x="250" y="12.5" width="40" height="15.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="40" id="gZW-dI-fEH"/>
                                                     </constraints>
@@ -754,7 +754,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0co-X2-7DR" customClass="DnaView" customModule="Dance_Dance_Evolution" customModuleProvider="target">
-                                                    <rect key="frame" x="10" y="30.5" width="374" height="75"/>
+                                                    <rect key="frame" x="10" y="30.5" width="280" height="75"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="75" id="y8i-7X-8et"/>
@@ -1292,12 +1292,28 @@
                         <outlet property="rightGoalArrow" destination="95u-2Z-fCC" id="5d7-H1-Gt9"/>
                         <outlet property="upGoalArrow" destination="ars-ME-efi" id="qIQ-NJ-a6g"/>
                         <segue destination="L9W-B4-s7C" kind="presentation" identifier="goToReadyScreen" animates="NO" id="Y0K-xI-tRc"/>
+                        <segue destination="a3a-PC-dpT" kind="presentation" identifier="goToScoreScreen" animates="NO" id="uLd-0S-Lm4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eRu-ob-bMW" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <swipeGestureRecognizer direction="right" id="9z2-XE-ZMS"/>
             </objects>
             <point key="canvasLocation" x="2686.875" y="59.154929577464792"/>
+        </scene>
+        <!--Score View Controller-->
+        <scene sceneID="eyB-r5-5KQ">
+            <objects>
+                <viewController id="a3a-PC-dpT" userLabel="Score View Controller" customClass="ScoreViewController" customModule="Dance_Dance_Evolution" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vOF-Xn-rYE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="IH4-nV-WdS"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qBa-Ct-hW3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3261" y="1112"/>
         </scene>
     </scenes>
     <resources>
